# ROS_Project

Pickit_ROS/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Pickit_ROS/devel/include/im_pickit_msgs/: BeltMotion.h  BoundingBox.h  CalibrationStatus.h  CameraConfig.h  CameraList.h  CameraState.h  CheckForObjects.h  CheckForObjectsRequest.h  CheckForObjectsResponse.h  ColorRangeHSV.h  ColorRangeRGB.h  CopyCalibration.h  CopyCalibrationRequest.h  CopyCalibrationResponse.h  File.h  FolderContent.h  LoadConfig.h  LoadConfigRequest.h  LoadConfigResponse.h  LoadSnapshot.h  LoadSnapshotRequest.h  LoadSnapshotResponse.h  MonitoringEvent.h  Object.h  ObjectArray.h  ObjectModel.h  PickitState.h  PickitStatus.h  PoseInRobotConvention.h  Reliability.h  ReliabilityValue.h  RoiStatus.h  SaveConfiguration.h  SaveConfigurationRequest.h  SaveConfigurationResponse.h  SaveSnapshot.h  SaveSnapshotRequest.h  SaveSnapshotResponse.h  SnapshotStatus.h  StatusError.h  (+8 more)
Pickit_ROS/devel/lib/pkgconfig/: im_pickit_msgs.pc  tsu_pickit.pc
Pickit_ROS/devel/share/im_pickit_msgs/cmake/: im_pickit_msgs-msg-paths.cmake  im_pickit_msgsConfig.cmake
Pickit_ROS/devel/share/roseus/ros/im_pickit_msgs/: manifest.l
Pickit_ROS/devel/share/tsu_pickit/cmake/: tsu_pickitConfig.cmake
Pickit_ROS/src/im_pickit_msgs/: CMakeLists.txt  package.xml
Pickit_ROS/src/im_pickit_msgs/include/im_pickit_msgs/: ObjectHelpers.h  common.h
Pickit_ROS/src/im_pickit_msgs/msg/: BeltMotion.msg  BoundingBox.msg  CalibrationStatus.msg  CameraConfig.msg  CameraList.msg  CameraState.msg  ColorRangeHSV.msg  ColorRangeRGB.msg  File.msg  FolderContent.msg  MonitoringEvent.msg  Object.msg  ObjectArray.msg  ObjectModel.msg  PickitState.msg  PickitStatus.msg  PoseInRobotConvention.msg  Reliability.msg  ReliabilityValue.msg  RoiStatus.msg  SnapshotStatus.msg  StatusError.msg  StatusInvalid.msg  StatusUnpickable.msg  SubStatus.msg  SubfolderContent.msg  TransformsInRobotConventions.msg
Pickit_ROS/src/im_pickit_msgs/srv/: CheckForObjects.srv  CopyCalibration.srv  LoadConfig.srv  LoadSnapshot.srv  SaveConfiguration.srv  SaveSnapshot.srv  StrArg.srv
Pickit_ROS/src/tsu_pickit/: CMakeLists.txt
Pickit_ROS/src/tsu_pickit/src/: publish_pose
UR5_Move/devel/: .catkin  .rosinstall  setup.sh
UR5_Move/devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
UR5_Move/devel/lib/moveit_tsu/: moveit_tsu_jointM  moveit_tsu_node  moveit_tsu_node2
UR5_Move/devel/lib/moveit_tutorials/: attached_body_tutorial  collision_contact_tutorial  interactivity_tutorial  kinematic_model_tutorial  motion_planning_api_tutorial  move_group_interface_tutorial  pick_place_tutorial  planning_pipeline_tutorial  planning_scene_ros_api_tutorial  planning_scene_tutorial  ros_api_tutorial  state_display_tutorial
UR5_Move/devel/lib/pkgconfig/: moveit_tsu.pc  moveit_tutorials.pc  ur10_moveit_config.pc  ur3_moveit_config.pc  ur5_inf3480.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
UR5_Move/devel/share/moveit_tsu/cmake/: moveit_tsuConfig.cmake
UR5_Move/devel/share/moveit_tutorials/cmake/: moveit_tutorialsConfig.cmake
UR5_Move/devel/share/ur10_moveit_config/cmake/: ur10_moveit_configConfig.cmake
UR5_Move/devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
UR5_Move/devel/share/ur5_inf3480/cmake/: ur5_inf3480Config.cmake
UR5_Move/devel/share/ur5_moveit_config/cmake/: ur5_moveit_configConfig.cmake
UR5_Move/devel/share/ur_bringup/cmake/: ur_bringupConfig.cmake
UR5_Move/devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
UR5_Move/devel/share/ur_driver/cmake/: ur_driverConfig.cmake
UR5_Move/devel/share/ur_gazebo/cmake/: ur_gazeboConfig.cmake
UR5_Move/devel/share/ur_kinematics/cmake/: ur_kinematicsConfig.cmake
UR5_Move/devel/share/ur_msgs/cmake/: ur_msgs-msg-paths.cmake  ur_msgsConfig.cmake
UR5_Move/src/moveit_tsu/: CMakeLists.txt
UR5_Move/src/moveit_tsu/src/: moveit_tsu_jointM.cpp  moveit_tsu_node.cpp
ur_modern_driver_Thomas/devel/: .catkin  .rosinstall  setup.sh
ur_modern_driver_Thomas/devel/lib/pkgconfig/: ur_modern_driver_Thomas.pc
(+179 files in other folders)
