<package format="2">
  <name>im_pickit_msgs</name>
  <version>0.1.0</version>
  <description>The im_pickit_msgs package</description>

  <maintainer email="info@intermodalics.eu">Intermodalics BVBA</maintainer>
  <license>Closed</license>

  <url type="website">http://www.pickit3d.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
</package>
